automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!-- Write your HTML in this file -->
 <html>
   <head>
+    <title>practice</title>
   </head>
 <body>
-  <title>Hello, World!</title>
+  <h1>Hello, World!</h1>
 </body>
 </html>
